src/app/modules/posts/components/post-main-card/post-main-card.component.scss
@use "../../../../../style/variables.scss" as *;

mat-card.main-card {
  padding: 0;
  display: flex;
  justify-content: space-around;
  background-color: $white-medium;
  outline: none;

  &:hover {
    cursor: pointer;

    mat-card-title {
      color: $primary-dark;
    }
  }

  mat-card-content,
  mat-card-subtitle,
  mat-card-title {
    margin-top: 1.6rem;
    font-family: $poppins-bold;
    color: $grey-500;
    line-height: 3rem;
  }

  mat-card-title {
    height: 5.6rem;
    margin-top: 10px;
    display: flex;
    align-items: center;
    transition: 0.1s;
  }

  mat-card-content {
    font-family: $roboto-regular;
    font-size: 1.6rem;
    line-height: 2.4rem;
    height: 21rem;
  }

  section.author-card-section {
    display: flex;
    align-items: center;

    img {
      border-radius: 100px;
      width: 4.8rem;
      height: 4.8rem;
      margin-right: 0.8rem;
    }

    div {
      position: relative;
      bottom: 0.6rem;

      span {
        display: block;
      }

      span:first-child {
        font-family: $poppins-bold;
      }
    }
  }

  div.date-tag-line {
    align-items: center;

    span:first-child {
      font-size: 1.2rem;
      padding: 0.8rem;
      font-family: $roboto-regular;
      background-color: $post-tag;
      margin-right: 0.8rem;
    }

    span:last-child {
      font-size: 1.4rem;
      font-family: $roboto-regular;
      color: $grey-200;
      font-weight: 900;
    }
  }

  &:hover {
    img.preview-image-container {
      box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 10px;
    }
  }

  div.preview-image-container {
    margin-right: 2.4rem;
    flex: 5;

    img.preview-image {
      object-fit: cover;
      -webkit-box-shadow: -10px 9px 21px -7px rgba(86, 86, 86, 0.52);
      box-shadow: -10px 9px 21px -7px rgba(86, 86, 86, 0.52);
      width: 100%;
      height: 380px;
    }
  }

  div.highlight-content-side {
    flex: 4;
  }
}

@media screen and (max-width: 890px) {
  mat-card.main-card {
    flex-direction: column;
    width: 100%;

    mat-card-content {
      height: auto;
      margin-bottom: 2.4rem;
    }

    div.date-tag-line {
      margin-top: 1.8rem;
    }

    div.preview-image-container {
      margin: 0;
    }
  }
}

@media screen and (max-width: 734px) {
  mat-card.main-card {
    div.preview-image-container {
      img.preview-image {
        height: 252px;
      }
    }
  }
}

